[package]
name = "poc-solana-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.17.6"
spl-token = { version = "4.0", path = "../../../token/program", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "1.17.6"
solana-sdk = "1.17.6"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
