[package]
name = "poc_solana_contracts"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.17.7"

[dev-dependencies]
solana-program-test = "1.17.7"
solana-sdk = "1.17.7"

[lib]
name = "poc_solana_contracts"
crate-type = ["cdylib", "lib"]